# yen

./: .gitignore  LICENSE  README.md  install.bat  install.ps1  install.sh  microvenv.py  mypy.ini  setup.cfg  tox.ini  userpath.pyz
.github/workflows/: build-and-test.yml  build.yml  test.yml  tox.yml
scripts/: trim_github_release_data.py
src/yen/: __init__.py  __main__.py  cli.py  downloader.py  fallback_release_data.json  github.py  linux_i686_release.json
tests/: yen_test.py
yen-rs/: Cargo.toml
yen-rs/src/: github.rs  main.rs  utils.rs
yen-rs/src/commands/: create.rs  ensurepath.rs  exec.rs  install.rs  list.rs  mod.rs  run.rs
